--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "~4.3.5"
   },
   "dependencies": {
+    "antd": "^4.16.13",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
